--- a/manifest.json
+++ b/manifest.json
@@ -3,17 +3,18 @@
   "name": "KCET Support PWA",
   "icons": [
     {
-      "src": "icon-192.png",
+      "src": "/ezikcet/icon-192.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "icon-512.png",
+      "src": "/ezikcet/icon-512.png",
       "type": "image/png",
       "sizes": "512x512"
     }
   ],
-  "start_url": "/index.html",
+  "start_url": "/ezikcet/index.html",
+  "scope": "/ezikcet/",
   "background_color": "#ffffff",
   "display": "standalone",
   "theme_color": "#007bff",
